# slack-mcp

./: .gitignore  .mcp.json  README.md  config.example.json  pyproject.toml  server.py  slack_summary.py
.claude/: settings.local.json
.github/workflows/: daily-summary.yml
src/: __init__.py  config.py  mcp_server.py  slack_client.py  summarizer.py
